Reimplementing VPF in the type system rather than by analysing the Mearless AST. VPF is now applicable in more places and works with our bool/block inlining!
There are a lot of confusing and challenging to debug interactions between VPF and Flows, so I have sort of just cut out anything that seems to be interacting between the two for now